--- a/src/main/resources/templates/mail/torrents.twig
+++ b/src/main/resources/templates/mail/torrents.twig
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-<h3>Torrent update notification</h3>
+Torrent update notification
 <p>{{ t.title }} [<a href="{{ t.torrentUrl }}">{{ t.torrentUrl }}</a>]</p>
 --<br/>
 TorrentUpdater Team
