--- a/src/main/resources/templates/web/_base.twig
+++ b/src/main/resources/templates/web/_base.twig
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <title>Tasks{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="/static/css/semantic.min.css" />
+    <script src="/static/js/jquery-3.2.1.min.js"></script>
+    <script src="/static/js/semantic.min.js"></script>
 </head>
 <style type="text/css">
     h2 {
@@ -17,7 +19,10 @@
 <body>
 
 <div class="ui container">
-    <h2 class="ui header">All Tasks</h2>
+    <h2 class="ui header">
+        <i class="send outline icon"></i>
+        All Tasks
+    </h2>
     {% block content %}
     {% endblock %}
 </div>
