favicon added to web pages

--- a/src/main/resources/templates/web/_base.twig
+++ b/src/main/resources/templates/web/_base.twig
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tasks{% block title %}{% endblock %}</title>
+    <link rel="icon" type="image/png" href="/static/img/logo.png" />
     <link rel="stylesheet" type="text/css" href="/static/css/semantic.min.css" />
     <script src="/static/js/jquery-3.2.1.min.js"></script>
     <script src="/static/js/semantic.min.js"></script>
