--- a/src/main/resources/templates/web/index.twig
+++ b/src/main/resources/templates/web/index.twig
@@ -9,9 +9,9 @@
                         <td class="eight wide">{{ t.vars.name }}</td>
                         <td class="four wide">
                             {% if defined(t.vars.checked) %}
-                            {{ t.vars.checked|date("HH:mm:ss") }}
-                            <br/>
-                            {{ t.vars.checked|date("dd MMMM yyyy")|lower }}
+                                {{ t.vars.checked|date("HH:mm:ss") }}
+                                <br/>
+                                {{ t.vars.checked|date("dd MMMM yyyy")|lower }}
                             {% endif %}
                         </td>
                         <td class="four wide"></td>
@@ -83,10 +83,10 @@
                                 OPERATIONS
                             </h4>
                             <div>
-                                <button class="ui primary button">
+                                <button class="ui primary button runjob" value="{{ t._id }}">
                                     <i class="icon play"></i> Run job
                                 </button>
-                                <button class="ui negative button">
+                                <button class="ui negative button removejob" value="{{ t._id }}">
                                     <i class="icon remove"></i> Remove job
                                 </button>
                             </div>
@@ -96,7 +96,41 @@
             </div>
         {% endfor %}
     </div>
+    <div class="ui basic modal">
+        <div class="ui icon header">
+            <i class="delete icon"></i>
+            Remove this job?
+        </div>
+        <div class="content">
+            <p>Confirm remove this job</p>
+        </div>
+        <div class="actions">
+            <div class="ui red basic cancel inverted button">
+                <i class="remove icon"></i>
+                No
+            </div>
+            <div class="ui green ok inverted button">
+                <i class="checkmark icon"></i>
+                Yes
+            </div>
+        </div>
+    </div>
     <script>
         $('.ui.accordion').accordion();
+        $('.runjob').click(function () {
+            $.post("api/run/", {"id": $(this).attr("value")});
+        });
+        $('.removejob').click(function () {
+            const id = $(this).attr("value");
+            $('.ui.basic.modal')
+                .modal({
+                    onApprove: function () {
+                        $.post("api/delete/", {"id": id}, function () {
+                            location.reload();
+                        })
+                    }
+                })
+                .modal('show');
+        });
     </script>
 {% endblock %}
