fixed crash if mail attachment is too big

--- a/src/main/resources/templates/mail/torrents_fail.twig
+++ b/src/main/resources/templates/mail/torrents_fail.twig
@@ -2,8 +2,10 @@
 <html>
 <head></head>
 <body>
-Torrent update notification
+<p style="color: darkred">Tasks cannot send email with this content</p>
 <p>{{ t.title }} [<a href="{{ t.torrentUrl }}">{{ t.torrentUrl }}</a>]</p>
+<p>Technical inforamtion</p>
+<pre><code>{{ tech }}</code></pre>
 --<br/>
 Tasks
 <br/>
