--- a/src/main/resources/templates/web/_base.twig
+++ b/src/main/resources/templates/web/_base.twig
@@ -5,18 +5,11 @@
     <title>Tasks{% block title %}{% endblock %}</title>
     <link rel="icon" type="image/png" href="/static/img/logo.png" />
     <link rel="stylesheet" type="text/css" href="/static/css/semantic.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
     <script src="/static/js/jquery-3.2.1.min.js"></script>
     <script src="/static/js/semantic.min.js"></script>
 </head>
-<style type="text/css">
-    h2 {
-        margin: 2em 0em;
-    }
-    .ui.container {
-        padding-top: 5em;
-        padding-bottom: 5em;
-    }
-</style>
 <body>
 
 <div class="ui container">
