--- a/src/main/resources/templates/web/index.twig
+++ b/src/main/resources/templates/web/index.twig
@@ -63,16 +63,16 @@
                             <table class="ui definition compact table">
                                 <tbody>
                                 <tr>
-                                    <td class="two wide column">ObjectId</td>
-                                    <td><code>{{ t._id }}</code></td>
+                                    <td class="two wide column">oid</td>
+                                    <td class="code">{{ t._id }}</td>
                                 </tr>
                                 <tr>
                                     <td class="two wide column">schedule</td>
-                                    <td><code>{{ join(t.schedule, "<br/>") }}</code></td>
+                                    <td class="code">{{ join(t.schedule, "<br/>") }}</td>
                                 </tr>
                                 <tr>
                                     <td class="two wide column">job</td>
-                                    <td><code>{{ t.job }}</code></td>
+                                    <td class="code">{{ t.job }}</td>
                                 </tr>
                                 </tbody>
                             </table>
