updated notification templates

--- a/src/main/resources/templates/notif/mg_mail_fail.twig
+++ b/src/main/resources/templates/notif/mg_mail_fail.twig
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head></head>
+<style>
+code { font-family: Menlo, "Courier New", monospaced; font-size: 9pt; }
+</style>
 <body>
 <p style="color: darkred">Tasks не смог отправить файл из-за ограничений почтовых сообщений.</p>
 <p>Вы можете скачать его по прямой <a href="{{ url }}">ссылке</a>.</p>
