--- a/src/main/resources/templates/web/index.html
+++ b/src/main/resources/templates/web/index.html
@@ -29,9 +29,13 @@
     <span th:each="sched : ${doc.schedule}" class="mono">
         <span th:text="${sched}"></span><br/>
     </span>
-    Base param:
-    <a th:if="${doc.params.url.startsWith('http')}" th:href="${doc.params.url}" th:text="${doc.params.url}"></a>
-    <span th:unless="${doc.params.url.startsWith('http')}" th:text="${doc.params.url}"></span>
+    Base param:<br/>
+    <div th:if="${doc.params.url}">
+        <a th:if="${doc.params.url.startsWith('http')}" th:href="${doc.params.url}" th:text="${doc.params.url}"></a>
+        <span th:unless="${doc.params.url.startsWith('http')}" th:text="${doc.params.url}"></span>
+        <br/>
+    </div>
+    <span th:if="${doc.params.num}" th:text="${doc.params.num}"></span>
 
     <table>
         <tr>
